--- a/views/example.jade
+++ b/views/example.jade
@@ -4,16 +4,18 @@ html
 	body
 		p(id='results')
 		script(type='text/javascript', src='javascripts/boomerang.min.js')
-		script(type='text/javascript', src='javascripts/example.js')
+		// script(type='text/javascript', src='javascripts/example.js')
 		script(type='text/javascript').
 			BOOMR.init({
-				beacon_url: "http://localhost:3000/beacon/example",
+				beacon_url: "http://localhost:3000/beacon/example/beacon.gif",
 				site_domain: "example.com",
 				user_ip: "#{remoteAddress}",
+				/*
 				BW: {
 					base_url: "http://localhost:3000/images/",
 					cookie: 'BOOMR-BW'
 				},
+				*/
 				RT: {
 					cookie: 'BOOMR-RT'
 				}
